# qa-rag-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: config.py  database.py
backend/agents/: citation.py  generation.py  orchestrator.py  query_analysis.py  reranking.py  retrieval.py  state.py  streaming.py  workflow.py
backend/api/: main.py
backend/mcp_servers/: document_mcp.py  vector_db_mcp.py  web_search_mcp.py
backend/models/: schemas.py
backend/services/: document_processor.py
backend/utils/: conversation_memory.py  mcp_client.py  milvus_client.py
demofiles/: # Introduction to Artificial Intell.txt  RAG Questionstxt.txt
frontend/: README.md  app.js  index.html  streaming-helpers.js  styles.css
